--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@react-native-community/blur": "^3.6.0",
+    "@react-native-community/datetimepicker": "^3.0.9",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "^6.0.0",
+    "@react-native-community/picker": "^1.8.1",
+    "@react-native-picker/picker": "^1.9.11",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "airtable": "^0.10.1",
@@ -16,15 +22,21 @@
     "expo": "^40.0.1",
     "expo-cli": "^4.2.1",
     "expo-status-bar": "~1.0.3",
+    "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.8.0",
-    "react-native-reanimated": "~1.13.0",
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-material-ui": "^1.30.1",
+    "react-native-paper": "^4.7.2",
+    "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-ui-lib": "^5.20.4",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.15.0",
-    "unix-timestamp": "^0.2.0"
+    "unix-timestamp": "^0.2.0",
+    "expo-font": "~8.4.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
